// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Layout /> with Navigation should render component 1`] = `
Array [
  <header
    className="sc-bwzfXH geYBAS"
  >
    <div
      className="sc-bdVaJa flBAph"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <i
        className="material-icons sc-bxivhb jrBfKJ"
        color="#fff"
        data-test="back"
        onClick={[MockFunction]}
      >
        arrow_back
      </i>
    </div>
    <h1
      className="sc-htpNat eSnwWs"
    >
      title
    </h1>
  </header>,
  <div
    className="sc-htoDjs dfwcpY"
  >
    test
  </div>,
  <nav
    className="sc-bZQynM gfjWgY"
  >
    <span
      className="sc-gzVnrw klvbjl"
    >
      <div
        className="sc-bdVaJa flBAph"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
      >
        <a
          color="#fff"
          href="/training"
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <i
            className="material-icons sc-EHOje evPMQv"
          >
            create
          </i>
        </a>
      </div>
    </span>
    <span
      className="sc-gzVnrw klvbjl"
    >
      <div
        className="sc-bdVaJa flBAph"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
      >
        <a
          color="#fff"
          href="/exam"
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <i
            className="material-icons sc-EHOje gwxweT"
          >
            note
          </i>
        </a>
      </div>
    </span>
    <span
      className="sc-gzVnrw klvbjl"
    >
      <div
        className="sc-bdVaJa flBAph"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
      >
        <a
          color="#fff"
          href="/karutas"
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <i
            className="material-icons sc-EHOje kZpNpk"
          >
            library_books
          </i>
        </a>
      </div>
    </span>
    <span
      className="sc-gzVnrw klvbjl"
    >
      <div
        className="sc-bdVaJa flBAph"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
      >
        <a
          color="#fff"
          href="/about"
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <i
            className="material-icons sc-EHOje jsOnhV"
          >
            settings
          </i>
        </a>
      </div>
    </span>
  </nav>,
]
`;

exports[`<Layout /> without Navigation should render component 1`] = `
Array [
  <header
    className="sc-bwzfXH geYBAS"
  >
    <div
      className="sc-bdVaJa flBAph"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <i
        className="material-icons sc-bxivhb jrBfKJ"
        color="#fff"
        data-test="back"
        onClick={[MockFunction]}
      >
        arrow_back
      </i>
    </div>
    <h1
      className="sc-htpNat eSnwWs"
    >
      title
    </h1>
  </header>,
  <div
    className="sc-htoDjs huhDoS"
  >
    test
  </div>,
]
`;
